tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/us-before-point.stderr
TOML parse error at line 1, column 21
  |
1 | us-before-point = 1_.2
  |                     ^
invalid integer
expected digit
